[package]
name = "ctmdp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
error = "0.1.9"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
this = "0.3.0"
thiserror = "2.0.17"
madepro = { path = "../vendor/madepro" }

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "compare_3d"
path = "src/bin/compare_3d.rs"

[[bin]]
name = "compare_4d"
path = "src/bin/compare_4d.rs"

[[bin]]
name = "compare_6d"
path = "src/bin/compare_6d.rs"

[[bin]]
name = "compare_gridworld_products"
path = "src/bin/compare_gridworld_products.rs"

[[bin]]
name = "generalization_products"
path = "src/bin/generalization_products.rs"
